# pipin.rs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  flake.nix  rust-toolchain.toml  rustfmt.toml
.github/workflows/: release.yml
frontend/: htmx.min.js  index.html  style.css
hardware/: gpio.c  gpio.h
src/: actions.rs  bindings.rs  config.rs  errors.rs  gpio.rs  logger.rs  main.rs
