[package]
name = "pipinrs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1" }
fastwebsockets = { version = "0.10.0", features = ["upgrade", "with_axum"] }
listenfd = "1.0.2"
serde = "1.0.219"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = "0.3.19"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
